--- a/src/index.css
+++ b/src/index.css
@@ -720,27 +720,30 @@ body {
 .order-main {
   display: flex;
   width: 100%;
-  gap: 10px;
+  align-items: center;
+  padding: 10px;
+  gap: 20px;
+  box-sizing: border-box;
   border-bottom: solid 1px var(--color-gray-20);
 }
 
 .order-main-item-title {
-  padding: 10px;
-  width: 130px;
+  width: 110px;
+  height: 110px;
   display: flex;
+  overflow: hidden;
   align-items: center;
   overflow: hidden;
 }
 
 .order-main-item-desc {
-  padding: 10px;
   display: flex;
   width: 100%;
   height: 116px;
 }
 
 .order-main-item {
-  flex-basis: 550px;
+  flex-grow: 1;
 }
 
 .order-main-item-price {
@@ -839,19 +842,16 @@ body {
 /* @@@@@@@@@@@@@@@@@@@@ user, seller - wishlist @@@@@@@@@@@@@@@@@@@@ */
 
 .review-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
   gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .review {
-  flex-basis: 440px;
-  flex-grow: 0;
-  flex-shrink: 0;
-  height: 100px;
+  height: 110px;
   padding: 1.2rem;
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: var(--fw-regular);
   background-color: var(--color-gray-20);
   display: flex;
@@ -865,6 +865,7 @@ body {
 }
 
 .review-content-desc {
+  margin-top: 6px;
   font-weight: var(--fw-medium);
 }
 
@@ -1837,6 +1838,7 @@ body {
 /* @@@@@@@@@@@@@@@ about @@@@@@@@@@@@@@@@@@@ */
 .about {
   display: flex;
+  flex-direction: column;
   gap: 30px;
   align-items: center;
   margin: 50px 0 70px;
@@ -1845,11 +1847,17 @@ body {
 .about-cover {
   width: 400px;
   height: 400px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 5px 5px 0 var(--color-primary);
   background-color: #dddddd;
 }
 
 .about-contents {
   flex-grow: 1;
+  box-shadow: 0 0 10px rgb(0 0 0 / 0.1);
 }
 
 .about-title {
@@ -2012,11 +2020,7 @@ body {
   }
 
   .review-list {
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-
-  .about {
+    display: flex;
     flex-direction: column;
   }
 }
