--- a/src/index.css
+++ b/src/index.css
@@ -635,17 +635,6 @@ body {
   justify-content: center;
 }
 
-.main-header {
-  height: 800px;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-}
-
-.main-cover {
-  object-fit: cover;
-}
-
 .main-coverstory {
   display: flex;
   flex-direction: column;
@@ -1178,12 +1167,16 @@ body {
 }
 
 .main-header {
-  max-height: 450px;
-  height: 100%;
+  height: 500px;
   overflow: hidden;
+}
 
+.main-cover {
   display: flex;
   align-items: center;
+}
+.main-cover-src {
+  object-fit: contain;
 }
 
 .coverstory-list {
@@ -1439,15 +1432,6 @@ body {
   flex-direction: column;
   padding-bottom: 100px;
   background-color: #fff8ef;
-}
-
-.main-header {
-  max-height: 450px;
-  height: 100%;
-  overflow: hidden;
-
-  display: flex;
-  align-items: center;
 }
 
 /* @@@@@@@@@@@@@@@@@@@@ Cart @@@@@@@@@@@@@@@@@@@@ */
