--- a/src/index.css
+++ b/src/index.css
@@ -1167,16 +1167,19 @@ body {
 }
 
 .main-header {
-  height: 500px;
+  width: 100%;
+  height: 400px;
   overflow: hidden;
 }
 
 .main-cover {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .main-cover-src {
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .coverstory-list {
