✨ Feat:마켓 페이지네이션 기능추가

--- a/src/index.css
+++ b/src/index.css
@@ -1874,6 +1874,20 @@ body {
   background-color: black;
 }
 
+/* @@@@@@@@@@@@@@@@@@@@ pagination @@@@@@@@@@@@@@@@@@@@@@ */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+
+.pagination .is_active {
+  color: var(--color-primary);
+  font-weight: 700;
+}
+
 /* @@@@@@@@@@@@@@@@@@@@ map @@@@@@@@@@@@@@@@@@@@@@ */
 
 .map {
