✨ Feat: 매거진 댓글기능 추가 완료

--- a/src/index.css
+++ b/src/index.css
@@ -1894,11 +1894,12 @@ body {
 .comment {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin: 30px 0;
+  gap: 30px;
+  margin: 0 0 30px;
 }
 
 .comment-item {
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   gap: 10px;
