--- a/src/index.css
+++ b/src/index.css
@@ -1958,6 +1958,139 @@ body {
   font-size: 18px;
 }
 
+/* @@@@@@@@@@@@@@@@@@@@@@ payment process @@@@@@@@@@@@@@@@@@@@@@*/
+.container {
+  margin: 70px 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+} 
+
+.user-info-section {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.user-infomation {
+  background-color: var(--color-white);
+  border: 1px solid var(--color-gray-20);
+  padding: 1rem;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.info-title-main{
+  font-weight: var(--fw-bold);
+  margin-bottom: 1rem;
+}
+
+.info-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+
+.payment-info-section {
+  flex: 0 0 30%;
+  border: 1px solid var(--color-gray-20);
+  padding: 1rem;
+  align-self: flex-start;
+  background-color: var(--color-white);
+}
+
+.payment-info-card {
+  padding: 0.5rem 0;
+}
+
+.card-infomation {
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+}
+
+.card-icon {
+  width: 2rem;
+}
+
+.plus-icon {
+  width: 1rem;
+  padding: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-new-card {
+  padding-top: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
+  color: var(--color-gray-30);
+  cursor: pointer;
+}
+
+.orderItem {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--color-gray-20);
+}
+
+.orderItem:last-child {
+  border: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.orderItem-img {
+  width: 120px; 
+  height: auto; 
+  aspect-ratio: 1 / 1; 
+  overflow: hidden; 
+}
+
+.orderItem-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+.orderItem-info {
+  margin-bottom: 0.5rem;
+}
+
+.orderprice-item {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.orderprice-item:last-child {
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--color-gray-20);
+}
+
+.orderprice-item-title {
+  font-weight: var(--fw-medium);
+  flex-basis: 210px;
+}
+
+.orderprice-total {
+  font-weight: var(--fw-medium);
+  display: flex;
+  justify-content: space-between;
+
+}
+
+
+
+
+
 /* @@@@@@@@@@@@@@@@@@@@@@ taplet @@@@@@@@@@@@@@@@@@@@@@*/
 @media (max-width: 1024px) {
   /* .l_wrapper {
