--- a/src/pages/Payment/Payment.module.css
+++ b/src/pages/Payment/Payment.module.css
@@ -1,18 +1,63 @@
-/* @@@@@@@@@@@@@@@@@@@@ paymentComplete @@@@@@@@@@@@@@@@@@@@ */
+.button {
+  font-size: 1.1rem;
+  font-weight: 500;
+  transition: all 0.3s;
+  cursor: pointer;
+}
 
-.complete-container {
+.button:hover {
+  background-color: var(--color-black-30);
+  border-color: var(--color-black-30);
+  color: var(--color-white);
+}
+
+.buttonLarge {
+  text-align: center;
+  max-width: 500px;
+  width: 100%;
+  padding: 10px 0;
+}
+
+.btnFill {
+  background-color: var(--color-black-10);
+  border: 2px solid var(--color-black-10);
+  color: var(--color-white);
+}
+
+
+.btnNull {
+  border: 2px solid var(--color-black-10);
+  box-sizing: border-box;
+}
+
+
+.btnLayout {
+  margin-top: 30px;
+}
+
+.l_wrapper {
+  max-width: 1200px;
+  width: auto;
+  margin: 0 auto;
+  padding: 0 50px;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.completeContainer {
   max-width: 600px;
   width: 100%;
   margin: 70px auto 0 auto;
 }
 
-.complete-main {
+.completeMain {
   background-color: var(--color-white);
   padding: 30px 30px 50px 30px;
   font-size: 18px;
 }
 
-.complete-header {
+.completeHeader {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,54 +66,57 @@
   margin-bottom: 30px;
 }
 
-.complete-title {
+.completeTitle {
   font-size: 28px;
 }
 
-.complete-desc {
+.completeDesc {
   font-size: 24px;
 }
 
-.payment-form {
+.paymentForm {
   display: flex;
   margin-top: 30px;
   padding-bottom: 10px;
   border-bottom: solid 2px var(--color-gray-20);
 }
 
-.payment-title {
+.paymentTitle {
   flex-basis: 200px;
   flex-shrink: 0;
 }
 
-.payment-form-inner.with_paddingbottom {
+.paymentFormInner.with_paddingbottom {
   padding-bottom: 20px;
 }
 
-.payment-form-inner.type_gray {
+.paymentFormInner.typeGray {
   color: var(--color-gray-30);
 }
 
-.payment-form-bottom {
+.paymentFormBottom {
   display: flex;
   margin-bottom: 40px;
 }
 
-/* @@@@@@@@@@@@@@@@@@@@@@ payment process @@@@@@@@@@@@@@@@@@@@@@*/
 .container {
+  gap: 40px;
+} 
+
+.processContainer {
   margin: 70px 0;
   display: flex;
   justify-content: space-between;
   gap: 40px;
-} 
+}
 
-.user-info-section {
+.userInfoSection {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
 
-.user-infomation {
+.userInfo {
   background-color: var(--color-white);
   border: 1px solid var(--color-gray-20);
   padding: 1rem;
@@ -78,19 +126,19 @@
   box-sizing: border-box;
 }
 
-.info-title-main{
+.infoTitle{
   font-weight: var(--fw-bold);
   margin-bottom: 1rem;
 }
 
-.info-detail {
+.infoDetail {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
 
-.payment-info-section {
+.paymentInfoSection {
   flex: 0 0 30%;
   border: 1px solid var(--color-gray-20);
   padding: 1rem;
@@ -98,21 +146,21 @@
   background-color: var(--color-white);
 }
 
-.payment-info-card {
+.paymentInfoCard {
   padding: 0.5rem 0;
 }
 
-.card-infomation {
+.cardInfo {
   display: flex;
   gap: 0.3rem;
   align-items: center;
 }
 
-.card-icon {
+.cardIcon {
   width: 2rem;
 }
 
-.plus-icon {
+.plusIcon {
   width: 1rem;
   padding: 0.2rem;
   display: flex;
@@ -120,7 +168,7 @@
   justify-content: center;
 }
 
-.add-new-card {
+.addNewCard {
   padding-top: 0.5rem;
   display: flex;
   gap: 0.5rem;
@@ -142,23 +190,23 @@
   padding-bottom: 0;
 }
 
-.orderItem-img {
+.orderItemImg {
   width: 120px; 
   height: auto; 
   aspect-ratio: 1 / 1; 
   overflow: hidden; 
 }
 
-.orderItem-img img {
+.orderItemImg img {
   width: 100%;
   height: 100%;
   object-fit: cover; 
 }
-.orderItem-info {
+.orderItemInfo {
   margin-bottom: 0.5rem;
 }
 
-.orderprice-item {
+.orderpriceItem {
   display: flex;
   justify-content: space-between;
   gap: 20px;
@@ -166,17 +214,16 @@
   align-items: center;
 }
 
-.orderprice-item:last-child {
+.orderpriceItem:last-child {
   padding-bottom: 20px;
   border-bottom: 1px solid var(--color-gray-20);
 }
 
-.orderprice-item-title {
+.orderpriceItemTitle {
   font-weight: var(--fw-medium);
-  flex-basis: 210px;
 }
 
-.orderprice-total {
+.orderpriceTotal {
   font-weight: var(--fw-medium);
   display: flex;
   justify-content: space-between;
