--- a/src/components/layout/Modal.module.css
+++ b/src/components/layout/Modal.module.css
@@ -1,3 +1,45 @@
+.button {
+  font-size: 1.1rem;
+  font-weight: 500;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--color-black-30);
+  border-color: var(--color-black-30);
+  color: var(--color-white);
+}
+
+.buttonSmall {
+  text-align: center;
+  padding: 8px 0;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+.buttonLarge {
+  text-align: center;
+  max-width: 500px;
+  width: 100%;
+  padding: 10px 0;
+}
+
+.btnFill {
+  background-color: var(--color-black-10);
+  border: 2px solid var(--color-black-10);
+  color: var(--color-white);
+}
+
+.btnNull {
+  border: 2px solid var(--color-black-10);
+  box-sizing: border-box;
+}
+
+.typeModalBtn {
+  width: 100%;
+}
+
 .modalPopup {
   position: fixed;
   background-color: rgb(0 0 0 / 0.8);
