--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,83 @@ body {
   flex-direction: column;
   overflow-x: hidden;
 }
+
+.l_wrapper {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 50px;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.hidden {
+  text-indent: -99999px;
+}
+
+/* popup */
+.modal-popup {
+  position: fixed;
+  background-color: rgb(0 0 0 / 0.8);
+  z-index: 1;
+
+  inset: 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
+  background-color: #f6f6f8;
+  width: 500px;
+  max-height: 200px;
+  height: 100%;
+  margin-top: -70px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-contents {
+  padding: 20px;
+  box-sizing: border-box;
+  flex-grow: 1;
+  flex-basis: 0;
+  flex-shrink: 0;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-text {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.err-text {
+  font-size: 14px;
+  color: var(--color-warning);
+}
+
+.button-box {
+  display: flex;
+  width: 100%;
+}
+
+
+.menu-item {
+  cursor: pointer;
+}
+
+.logout {
+  cursor: pointer;
+}
