--- a/src/pages/Payment/Payment.module.css
+++ b/src/pages/Payment/Payment.module.css
@@ -100,11 +100,12 @@
 }
 
 .container {
-  gap: 40px;
-} 
+  width: 100%;
+  margin-top: 50px;
+  color: var(--color-black-20);
+}
 
 .processContainer {
-  margin: 70px 0;
   display: flex;
   justify-content: space-between;
   gap: 40px;
